added and new things

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum impedit voluptatum temporibus doloremque asperiores consequuntur, exercitationem at? Minima sapiente obcaecati sint, accusamus, aliquam recusandae ipsam sed nulla, perspiciatis ea atque.</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum impedit voluptatum temporibus doloremque asperiores consequuntur, exercitationem at? Minima sapiente obcaecati sint, accusamus, aliquam recusandae ipsam sed nulla, perspiciatis ea atque.</h1>
 </body>
 </html>
